--- a/netflix.css
+++ b/netflix.css
@@ -1,14 +1,15 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 
 }
-body{
+
+body {
     background: #000;
 }
+
 header {
     position: absolute;
     top: 0;
@@ -21,51 +22,60 @@ header {
     z-index: 100;
 
 }
+
 header .logo {
     /* max-width: 1500px; */
     left: 25px;
 }
+
 .navbar {
     display: flex;
 
 }
+
 .navbar li {
     list-style: none;
     margin: 0 10px;
 }
+
 .navbar li a {
     color: #fff;
     text-decoration: none;
     font-weight: 500;
     letter-spacing: 1px;
 }
+
 .navbar li a:hover {
     color: #de0611;
 
 }
+
 .search {
     position: relative;
     width: 300px;
     height: 40px;
 }
+
 .search input {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     color: #fff;
     background: transparent;
-    border:1px solid rgba(red, green, blue, alpha);
+    border: 1px solid rgba(red, green, blue, alpha);
     outline: none;
     border-radius: 4px;
     padding: 0 10px 0 10px;
     backdrop-filter: blur(20px);
 
 }
+
 .search input::placeholder {
     color: #fff;
 }
+
 .search .fa-search {
     position: absolute;
     top: 50%;
@@ -83,9 +93,10 @@ header .logo {
     min-height: 100vh;
     padding: 0 100px;
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     align-items: center;
 }
+
 .banner .bg {
     position: absolute;
     top: 0;
@@ -102,23 +113,29 @@ header .logo {
     z-index: 1;
     max-width: 550px;
 }
+
 .movieTital {
     max-width: 250px;
 }
+
 .banner .content h4 {
     color: rgba(255, 255, 2555, 0.5);
     font-weight: 500;
 }
+
 .banner .content h4 span {
     padding: 0 10px;
     border-right: 1px solid rgba(255, 255, 2555, 0.5);
 }
+
 .banner .content h4 span:first-child {
-padding-left: 0;
+    padding-left: 0;
 }
+
 .banner .content h4 span:last-child {
     border-right: none;
 }
+
 .banner .content h4 span i {
     background: #de0611;
     color: #fff;
@@ -127,6 +144,7 @@ padding-left: 0;
     font-style: normal;
     border-radius: 2px;
 }
+
 .banner .content p {
     font-size: 1em;
     font-weight: 300;
@@ -134,9 +152,11 @@ padding-left: 0;
     color: #fff;
     margin: 5px 0 20px;
 }
+
 .banner .content .buttons {
     position: relative;
 }
+
 .banner .content .buttons a {
     position: relative;
     display: inline-block;
@@ -148,10 +168,12 @@ padding-left: 0;
     letter-spacing: 1px;
     text-transform: uppercase;
 }
+
 .banner .content .buttons a:nth-child(2) {
     background: #000;
     border: 1px solid rgba(255, 255, 2555, 0.1);
 }
+
 .banner .content .buttons a:hover:nth-child(2) {
     background: #de0611;
 }
@@ -178,6 +200,7 @@ padding-left: 0;
     margin-right: 10px;
     max-width: 50px;
 }
+
 .trailer {
     position: fixed;
     top: 50%;
@@ -193,6 +216,7 @@ padding-left: 0;
     visibility: hidden;
     opacity: 0;
 }
+
 .trailer.active {
     visibility: visible;
     opacity: 1;
@@ -213,31 +237,47 @@ padding-left: 0;
     max-width: 32px;
 
 }
+h4{
+    padding-top: 10px;
+    font-family: 'Courier New', Courier, monospace;
+}
 
-/* @media (max-width: 991px) {
+@media (max-width: 991px) {
     header {
-padding: 20px 50px;
-flex-direction: column;
+        padding: 20px 50px;
+        flex-direction: column;
     }
+    .logo{
+        padding-bottom: 15px;
+    }
+    .movieTital{
+        padding-top: 20px;
+    }
+    
+
     .navbar {
-        display: flex;
-        justify-content: center;
+        /* display: flex; */
+        display: none;
+        /* justify-content: center;
         flex-wrap: wrap;
-        margin: 100px 50px;
-    
+        margin: 100px 50px; */
+
     }
+
     .banner {
-        /* padding: 100px 50px; */
-    
-    /* }
+        padding: 100px 50px;
+
+    }
+
     .banner .play {
         left: 50px;
     }
+
     .play img {
         margin-right: 10px;
         max-width: 40px;
-    } */
-/* }  */
+    }
+}
 
 .keshav a {
     /* position: relative;
@@ -250,6 +290,7 @@ flex-direction: column;
     text-decoration: none;
     color: #fff;
 }
+
 .keshav a:hover {
     color: red;
 }
